--- a/lib/Header.css
+++ b/lib/Header.css
@@ -2,14 +2,13 @@
   height: 200px;
   display: flex;
   justify-content: space-between;
-  /*align-items: center;*/
-  padding: 50px;
-  background-color: grey;
+  padding: 0 25px;
+  border-bottom: 2px solid #363636;
 }
 
 .logo {
+  height: 100px;
   display: flex;
-  /*align-self: center;*/
   flex-direction: column;
 }
 
@@ -18,10 +17,17 @@ h1 {
   text-align: left;
 }
 
+.quote {
+  width: 33.33333%;
+  margin-top: 40px;
+  color: yellow;
+  font-family: 'Architects Daughter', cursive;
+  font-size: 30px;
+}
+
 button {
   height: 100px;
-  width: 400px;
-  margin-left: 400px;
+  width: 275px;
   background-color: #1291BB;
   /*background-image: url('/Users/christielynam/turing/mod2/projects/weathrly/assets/pin.svg');*/
   background-repeat: no-repeat;
