--- a/lib/CurrentWeather.css
+++ b/lib/CurrentWeather.css
@@ -1,19 +1,30 @@
 .container {
+  padding: 25px;
   display: flex;
   flex-direction: column;
   background-color: #1E2023;
+}
+
+.quote {
+  margin-bottom: 50px;
+  color: yellow;
+  font-family: 'Architects Daughter', cursive;
+  font-size: 36px;
+  text-align: center;
 }
 
 .dateCity {
   height: 100px;
   padding: 0 20px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  /*justify-content: space-between;*/
 }
 
 .date,
 .city {
   color: #ffffff;
+  font-size: 36px;
 }
 
 .temp,
@@ -25,10 +36,10 @@
 }
 
 .now {
-  height: 500px;
+  height: 200px;
   display: flex;
   justify-content: space-around;
-  margin-top: 75px;
+  /*margin-top: 75px;*/
 }
 
 .temp {
@@ -71,9 +82,9 @@
 }
 
 .dailyCondition {
-  width: 600px;
+  width: 500px;
   padding-top: 25px;
   color: #C7C8C9;
   font-family: 'Architects Daughter', cursive;
-  font-size: 24px;
+  font-size: 36px;
 }
