Fixed merge conflicts and restyled page

--- a/lib/CurrentWeather.css
+++ b/lib/CurrentWeather.css
@@ -13,15 +13,12 @@
   text-align: center;
 }
 
-.dateCity {
+.city {
   height: 100px;
   padding: 0 20px;
-  display: flex;
-  flex-direction: column;
-  /*justify-content: space-between;*/
+  text-align: center;
 }
 
-.date,
 .city {
   color: #ffffff;
   font-size: 36px;
