--- a/lib/CurrentWeather.css
+++ b/lib/CurrentWeather.css
@@ -14,11 +14,7 @@
 }
 
 .city {
-  /*height: 100px;*/
   padding: 0 20px;
-  /*color: #ffffff;*/
-  /*font-size: 36px;*/
-  /*text-align: center;*/
 }
 
 .city,
@@ -80,7 +76,11 @@
 .dailyReport {
   margin: 50px 0;
   color: yellow;
-  /*color: #C7C8C9;*/
   font-size: 36px;
   text-align: center;
+}
+
+.weatherIcon {
+  height: 200px;
+  width: 200px;
 }
