--- a/lib/Components/Search/Search.css
+++ b/lib/Components/Search/Search.css
@@ -1,12 +1,11 @@
 .search-container {
   height: 75px;
-  /*margin-bottom: 100px;*/
 }
 
 input {
   width: 500px;
   height: 100px;
-  padding: 0 10px;
+  padding: 0 20px;
   background-color: #363636;
   border: none;
   color: #C7C8C9;
@@ -18,4 +17,10 @@ input {
 input::placeholder {
   text-align: center;
   color: #C7C8C9;
+}
+
+.suggestions {
+  color: #C7C8C9;
+  font-family: 'Architects Daughter', cursive;
+  list-style-type: none;
 }
