--- a/lib/Components/Welcome/Welcome.css
+++ b/lib/Components/Welcome/Welcome.css
@@ -1,5 +1,6 @@
 .welcomeContainer {
   height: 100vh;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
