--- a/lib/Components/Header/Header.css
+++ b/lib/Components/Header/Header.css
@@ -1,8 +1,8 @@
 .header {
-  height: 200px;
+  height: 250px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /*align-items: center;*/
   padding: 0 25px;
   border-bottom: 2px solid #363636;
 }
