make site responsive

--- a/lib/Components/CurrentWeather/CurrentWeather.css
+++ b/lib/Components/CurrentWeather/CurrentWeather.css
@@ -84,3 +84,10 @@
   height: 300px;
   width: 300px;
 }
+
+@media screen and (max-width: 900px) {
+  .mainContent {
+    flex-direction: column;
+  }
+
+}
