--- a/lib/Components/Header/Header.css
+++ b/lib/Components/Header/Header.css
@@ -2,7 +2,36 @@
   height: 250px;
   display: flex;
   justify-content: space-between;
-  /*align-items: center;*/
   padding: 0 25px;
   border-bottom: 2px solid #363636;
+}
+
+@media screen and (max-width: 1100px) {
+  .header {
+    height: 400px;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: center;
+  }
+
+  .friendly,
+  .forecast {
+    font-size: 75px;
+  }
+
+  input {
+    height: 50px;
+    margin-top: 25px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  input {
+    width: 300px;
+    font-size: 14px;
+  }
+  .friendly,
+  .forecast {
+    font-size: 60px;
+  }
 }
